# dcka-class-notes

./: .gitignore  404.html  PowerON-allVM.bat  README.md  Shutdown-allVM.bat  command.txt  content.json  index.html  list_models.py  mkdocs.yml  pyproject.toml  sitemap.xml  start_dev.ps1
00_environment_setup/: index.html
01_docker_intro/: index.html
02_docker_management/: index.html
03_docker_images/: index.html
04_kubernetes/: index.html
backend/: Dockerfile  README.md  chat_server.py
docs/: 00_environment_setup.md  01_docker_intro.md  02_docker_management.md  03_docker_images.md  04_kubernetes.md  command.txt  index.md  lab01_environment_setup.md  lab02_docker_install.md  lab03_podman.md  lab04_docker_hub_rate_limit.md  lab05_private_registry.md  lab06_docker_basics.md  lab07_persistent_storage.md  lab08_wordpress.md  lab09_commit.md  lab10_dockerfile.md  lab11_standalone_k8s.md  lab12_k8s_install.md  lab13_k8s_commands.md  lab14_namespace_rolling.md  lab15_service.md  lab16_pv_pvc.md  lab17_secret.md  lab18_rbac_event_log.md  lab19_k8s_wordpress_mysql.md  lab20_dashboard.md  lab21_registry_web.md
hooks/: generate_content.py
lab01_environment_setup/: index.html
lab02_docker_install/: index.html
lab03_podman/: index.html
lab04_docker_hub_rate_limit/: index.html
lab05_private_registry/: index.html
lab06_docker_basics/: index.html
lab07_persistent_storage/: index.html
lab08_wordpress/: index.html
lab09_commit/: index.html
lab10_dockerfile/: index.html
lab11_standalone_k8s/: index.html
lab12_k8s_install/: index.html
(+33 files in other folders)
